--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-app-rewire-eslint": "^0.2.3",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-app-rewire-eslint": "^0.2.3"
+    "react-transition-group": "^2.2.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
